add readme and html meta

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <title>智能家居管理系统</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script src="/src/main.tsx" type="module"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta content="/og.png" name="og:image"/>
+    <meta
+      content="林沅霖 (3190106167) 浙江大学 2022 秋冬学期《B/S体系软件设计》期末 Project"
+      name="description"
+    />
+    <meta
+      content="林沅霖 (3190106167) 浙江大学 2022 秋冬学期《B/S体系软件设计》期末 Project"
+      name="og:description"
+    />
+    <title>智能家居管理系统</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="/src/main.tsx" type="module"></script>
+  </body>
 </html>
